user-accounts: Fix missing records in the history dialog

"Session Ended" record may miss if "Session Started" isn't in the
same week, which is caused by a wrong order of conditions.

https://bugzilla.gnome.org/show_bug.cgi?id=762346